<resources>
    <string name="app_name">SilentKosice</string>
    <string name="powered_by">Powered by SpaceCode</string>
    <string name="hint_number">Your phone number</string>
    <string name="hint_code">Verification code</string>
    <string name="get_code">Get verification code</string>
    <string name="sign_in">Sign in</string>
    <string name="user_name">Snoopy Dog</string>
    <string name="level_text">Level</string>
    <string name="level_value">12</string>
    <string name="total_records">Total records</string>
    <string name="total_records_value">152</string>
    <string name="today_records_text">Today records</string>
    <string name="reward">Upcoming rewards</string>
    <string name="today_records_value">5</string>
    <string name="reward_1">2x Hockey tickets</string>
    <string name="reward_2">Free city parking</string>
    <string name="progress_1">8/10</string>
    <string name="progress_2">4/20</string>
    <string name="week_stats">Weekly statistics</string>
    <string name="profile_text">Profile</string>
    <string name="info_text">Tap to start recording</string>
    <string name="not_recording">Not recording</string>
</resources>
